[project]
name = "ppo_balancer"
version = "1.0.0"
description = "The PPO balancer is a feedforward neural network policy trained by reinforcement learning with a sim-to-real pipeline"
requires-python = ">= 3.9"
dependencies = []

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=2,<4"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
ppo_balancer = { path = ".", editable = true }

[tool.pixi.dependencies]
gin-config = ">=0.5.0"
gymnasium = ">=0.28.1,<1.0"
stable-baselines3 = ">=2.1.0,<3.0"
tensorboard = "*"
upkie = ">=6,<7"

[tool.pixi.feature.pack.dependencies]
pixi-pack = "*"

[tool.pixi.feature.pack.tasks]
pack-to-upkie = "pixi-pack pack -e default --platform linux-aarch64 --ignore-pypi-errors"

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
pack = { features = ["pack"], solve-group = "default" }
