[project]
name = "ppo_balancer"
version = "1.0.0"
description = "The PPO balancer is a feedforward neural network policy trained by reinforcement learning with a sim-to-real pipeline"
requires-python = ">= 3.9"
dependencies = []

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=2,<4"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
ppo_balancer = { path = ".", editable = true }

[tool.pixi.dependencies]
gin-config = ">=0.5.0"
gymnasium = ">=1.0.0"
stable-baselines3 = ">=2.1.0,<3.0"
tensorboard = ">=2,<3"
upkie = ">=8,<9"

[tool.pixi.feature.pack]
dependencies = { pixi-pack = ">=0.7.2" }
tasks.pack = "pixi-pack -e default --platform linux-aarch64 --ignore-pypi-non-wheel"

[tool.pixi.feature.tensorboard]
tasks.tensorboard = { cmd = "tensorboard --logdir $UPKIE_TRAINING_PATH/$(date +%Y-%m-%d)" }

[tool.pixi.tasks.agent]
cmd = "python ppo_balancer/run.py"

[tool.pixi.tasks.train]
args = ["nb_envs"]
cmd = "./tools/bazelisk run //ppo_balancer:train -- --nb-envs {{ nb_envs }}"

[tool.pixi.tasks.show-training]
args = ["nb_envs"]
cmd = "./tools/bazelisk run //ppo_balancer:train -- --nb-envs {{ nb_envs }} --show"

[tool.pixi.environments]
default = { features = [] }
pack = { features = ["pack"] }
tensorboard = { features = ["tensorboard"] }
